Add Supabase integration with database schema and API utilities

--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "reset-db": "node scripts/reset-db.js"
   },
   "dependencies": {
     "@radix-ui/react-slider": "^1.2.3",
+    "@supabase/supabase-js": "^2.49.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
