--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "reset-db": "node scripts/reset-db.js"
+    "reset-db": "node scripts/reset-db.js",
+    "setup-storage": "node scripts/setup-storage.js"
   },
   "dependencies": {
     "@radix-ui/react-slider": "^1.2.3",
