--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "setup-storage": "node scripts/setup-storage.js"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
