--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-big-calendar": "^1.18.0",
     "react-day-picker": "^9.6.4",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.4"
