--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.3",
     "browser-image-compression": "^2.0.2",
@@ -34,6 +35,7 @@
     "react-big-calendar": "^1.18.0",
     "react-day-picker": "^9.6.4",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "resend": "^4.2.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
