--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.3",
+    "@types/react-datepicker": "^6.2.0",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,6 +34,8 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
+    "react-calendar": "^5.1.0",
+    "react-datepicker": "^8.2.1",
     "react-day-picker": "^9.6.4",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
