--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-datepicker": "^8.2.1",
     "react-day-picker": "^9.6.4",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-hot-toast": "^2.5.2",
     "resend": "^4.2.0",
     "sonner": "^2.0.3",
