--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "setup-storage": "node scripts/setup-storage.js"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.3",
@@ -41,6 +43,7 @@
     "react-day-picker": "^9.6.4",
     "react-dom": "^18.3.1",
     "react-google-recaptcha-v3": "^1.10.1",
+    "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "resend": "^4.2.0",
     "sonner": "^2.0.3",
