--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-email/components": "^0.0.36",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.3",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.74.3",
     "@tanstack/react-query-devtools": "^5.74.3",
     "@types/react-datepicker": "^6.2.0",
@@ -50,6 +51,9 @@
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "resend": "^4.2.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
@@ -66,9 +70,12 @@
     "@types/react": "^18",
     "@types/react-big-calendar": "^1.16.1",
     "@types/react-dom": "^18",
-    "eslint": "^9",
+    "eslint": "^9.30.1",
     "eslint-config-next": "15.2.4",
+    "imagemin-cli": "^8.0.0",
+    "supabase-cli": "^0.0.21",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.4"
   }
 }
